HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainMultiple/Source/Main.uv
//! Rejected executable specimen for multiple main procedures.

public procedure main(context: Context) -> i32 {
    return 0
}

public procedure main(context: Context) -> i32 {
    return 1
}
